Added a roman numeral token object to Puzzle 06 (Roman Numeral)

--- a/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
+++ b/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RomanNumeralToken.cs" />
+    <Compile Include="RomanNumeralTokenSpecifications.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenSpecifications.cs" />
   </ItemGroup>
