--- a/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
+++ b/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Machine.Specifications, Version=0.3.0.0, Culture=neutral, PublicKeyToken=5c474de7a495cff1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Machine.Specification (.NET 4 - build 20)\Machine.Specifications.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
