--- a/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
+++ b/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Build.cs" />
+    <Compile Include="BuildSpecifications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RomanNumeralToken.cs" />
     <Compile Include="RomanNumeralTokenSpecifications.cs" />
