Added an evaluator object to Puzzle 06 (Roman Numeral)

--- a/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
+++ b/Puzzle 06 (Roman Numeral)/Puzzle 06 (Roman Numeral).csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="Build.cs" />
     <Compile Include="BuildSpecifications.cs" />
+    <Compile Include="Evaluator.cs" />
+    <Compile Include="EvaluatorSpecifications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RomanNumeralToken.cs" />
     <Compile Include="RomanNumeralTokenSpecifications.cs" />
