Added reference to Machine.Specification for Puzzle 07 (Sorted Arrays)

--- a/Puzzle 07 (Sorted Arrays)/Puzzle 07 (Sorted Arrays).csproj
+++ b/Puzzle 07 (Sorted Arrays)/Puzzle 07 (Sorted Arrays).csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Machine.Specifications">
+      <HintPath>..\Machine.Specification (.NET 4 - build 20)\Machine.Specifications.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
